--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Iniciar Sesión</title>
+    <style>
+        body { background-color: #f0f0f0; font-family: Arial, sans-serif; }
+        label, input, button { display: block; margin: 10px; }
+        footer { text-align: center; margin-top: 50px; color: #555; }
+    </style>
 </head>
 <body>
-    
+    <h1>Iniciar Sesión</h1>
+    <form action="home.html" method="GET">
+        <label for="usuario">Usuario</label>
+        <input type="text" id="usuario" name="usuario" required>
+
+        <label for="password">Contraseña</label>
+        <input type="password" id="password" name="password" required>
+
+        <button type="submit">Aceptar</button>
+    </form>
+    <footer>
+        © 2025 Mi Sitio Web
+    </footer>
 </body>
 </html>
