--- a/home.html
+++ b/home.html
@@ -25,11 +25,13 @@
     </header>
     <main>
         <h2>Bienvenido</h2>
+
         <section>
             <h3>Mis Estudios</h3>
             <p>Actualmente estudio Desarrollo Web, Diseño UX y Programación Full Stack.</p>
             <img src="https://via.placeholder.com/300" alt="Estudios">
         </section>
+
         <section>
             <h3>Mis Conocimientos</h3>
             <p>HTML: 20%</p>
@@ -41,24 +43,33 @@
             <p>Bases de Datos: 30%</p>
             <progress value="30" max="100"></progress>
         </section>
+
         <section>
             <h3>Multimedia</h3>
-            <audio controls>
-                <source src="sample.mp3" type="audio/mpeg">
-                Tu navegador no soporta audio.
-            </audio>
-            <br>
-            <video width="320" height="240" controls>
-                <source src="sample.mp4" type="video/mp4">
-                Tu navegador no soporta video.
-            </video>
+
+            <!-- Audio de Jungkook -->
+            <iframe src="https://archive.org/embed/bts-jungkook-still-with-you"
+                    width="300" height="60" frameborder="0"></iframe>
+
+            <br><br>
+
+            <!-- Video de Jungkook -->
+            <iframe width="560" height="315"
+                    src="https://www.youtube.com/embed/mHNCM-YALSA"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+
         </section>
+
         <marquee behavior="scroll" direction="left">¡Bienvenido a mi sitio web nostálgico!</marquee>
     </main>
+
     <aside>
         <h3>Noticias</h3>
         <p>Próximos cursos y certificaciones.</p>
     </aside>
+
     <footer>
         © 2025 Mi Sitio Web
     </footer>
