--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
         <section>
             <h3>Mis Estudios</h3>
             <p>Actualmente estudio Desarrollo Web, Diseño UX y Programación Full Stack.</p>
-            <img src="https://via.placeholder.com/300" alt="Estudios">
+            <img src="https://pm1.aminoapps.com/6593/4c2c2142545df1102f22a275e91267c3439b56ec_00.jpg" alt="Jungkook">
         </section>
 
         <section>
@@ -62,7 +62,7 @@
 
         </section>
 
-        <marquee behavior="scroll" direction="left">¡Bienvenido a mi sitio web nostálgico!</marquee>
+        <marquee behavior="scroll" direction="left">¡Bienvenido a mi sitio web, amo a Jungkook de Bts jaja!</marquee>
     </main>
 
     <aside>
