--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
         <section>
             <h3>Mis Estudios</h3>
             <p>Actualmente estudio Desarrollo Web, Diseño UX y Programación Full Stack.</p>
-            <img src="https://pm1.aminoapps.com/6593/4c2c2142545df1102f22a275e91267c3439b56ec_00.jpg" alt="Jungkook">
+            <img src="https://i.pinimg.com/474x/0d/d7/c9/0dd7c95b6c578dc9d504a4fd81b2d304.jpg" alt="Jungkook">
         </section>
 
         <section>
