--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <title>Inicio - Mi Sitio</title>
     <style>
         body { background-color: #e0f7fa; font-family: Arial, sans-serif; }
-        header, footer { background: #00796b; color: white; padding: 10px; }
+        header, footer { background: #690079; color: white; padding: 10px; }
         nav a { margin: 0 10px; color: white; text-decoration: none; }
         main { padding: 20px; }
         aside { background: #b2dfdb; padding: 10px; }
