--- a/index.html
+++ b/index.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <title>Iniciar Sesión</title>
     <style>
-        body { background-color: #f0f0f0; font-family: Arial, sans-serif; }
-        label, input, button { display: block; margin: 10px; }
-        footer { text-align: center; margin-top: 50px; color: #555; }
+        html, body {
+            height: 100%;
+            margin: 0;
+            background-color: #e1bee7;
+            font-family: Arial, sans-serif;
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+        form {
+            flex: 1;
+        }
+        label, input, button {
+            display: block;
+            margin: 10px auto;
+        }
+        button {
+            background: #8e24aa;
+            color: white;
+            border: none;
+            padding: 10px;
+            cursor: pointer;
+        }
+        footer {
+            color: #555;
+            padding: 10px;
+        }
     </style>
 </head>
 <body>
